fixed image stretch and text hugging top image

--- a/src/components/ImageItem.css
+++ b/src/components/ImageItem.css
@@ -9,7 +9,7 @@
 .image__item__pic-wrap {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 70%;
   height: auto;
   border: 2px solid var(--var--accent-color);
   border-radius: 0.625em;
@@ -21,7 +21,13 @@
   min-width: 250px;
 }
 
+.image__item__img {
+  width: 100%;
+  height: auto;
+}
+
 .image__item__text {
+  margin-top: 1rem;
   text-align: center;
   font-style: italic;
   font-size: 0.8rem;
